0.9.5
    - handle INFO_DESTINATION

0.9.4
    - Removed SampleKey. KeyHash is adequate to represent a key of samples and instances.
    - WriterLivelinessListener adds support for detecting loss of liveliness
      of writers.

0.9.3
    - FIX: primitive types are aligned on their natural boundaries.
    - First succesful interoperability test with OpenDDS. Both subscription
      and publication tests work with OpenDDS Messenger example.
    
0.9.2
    - FIX: Use parameter PID_BUILTIN_TOPIC_KEY(0x005a) during discovery
      instead of KeyHash(0x0070)
    - First successful interoperability tests with OpenSplice 6.3.
      Using Subscriber of examples.ospl.hello with slightly modified 
      version of Ospl hello example works ok. One need to write
      something like 10 samples before exiting (waiting 1 sec between
      samples), because ospl publisher exits before match making during 
      discovery is finished. 
     
0.9.1
    - Type annotation can be used to set the topic name and type name 
      reported to remote entities. 
    - Possibility to access a specific instance from writers history cache
        
0.9.0
    - DirectedWrite. RTPSReader checks if incoming data contains 
      DirectedWrite inline qos, and if so, accepts Data only if
      there is a matching Guid.
    - CoherentSet support. Coherent sets are handled by udds history
      cache.
    - PropertyList
    - ExpectsInlineQoS. RTPSWriter sends inline QoS to readers with
      each sample, if subscription data during discovery contains
      PID_EXPECTS_INLINE_QOS parameter
    
0.8.8
    - FIX: DataReader.clear() had a bug, samples were not removed.

0.8.7 
    - FIX: Keys for builtin topics are not subject to MD5 digest.
     
0.8.6
    - Added getReaders() and getWriters() to Participant. This allows 
      access to existing entities.
    
0.8.5
    - Added getGuid() method to udds Participant & Entity
     
0.8.4
    - Changed EntityFactory to be a class instead of interface.
    