@@ -1,6 +1,7 @@
 0.9.5
     - handle INFO_DESTINATION
-
+    - Detect of restoration of liveliness. 
+    
 0.9.4
     - Removed SampleKey. KeyHash is adequate to represent a key of samples and instances.
     - WriterLivelinessListener adds support for detecting loss of liveliness
